Move withdraw and deposit logical to wallet domain